--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "np": "^7.4.0"
+  },
+  "dependencies": {
+    "express": "^4.17.1",
+    "firebase-admin": "^9.5.0"
   }
 }
