--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"No test specified\"",
-    "publish": "np"
+    "publish": "np",
+    "prepare": "husky install"
   },
   "bugs": {
     "url": "https://github.com/Asaf-S/firebase-express-dashboard/issues"
@@ -24,7 +25,15 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.11",
-    "np": "^7.4.0"
+    "@types/jest": "^26.0.21",
+    "husky": "^5.1.3",
+    "jest": "^26.6.3",
+    "lint-staged": "^10.5.4",
+    "np": "^7.4.0",
+    "prettier": "^2.2.1",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.5.4",
+    "ts-node": "^9.1.1"
   },
   "dependencies": {
     "express": "^4.17.1",
