--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "firebase-express-dashboard",
   "version": "0.1.0-0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
     "test": "rimraf ./dist && jest --forceExit",
     "publish": "np",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prebuild": "tslint -c tslint.json -p tsconfig.json --fix",
+    "prestart": "npm run build",
+    "build": "rimraf dist && tsc -sourcemap",
+    "postbuild": "shx cp -R ./src/public ./dist",
+    "start": "node -r source-map-support/register dist/demo.js"
   },
   "bugs": {
     "url": "https://github.com/Asaf-S/firebase-express-dashboard/issues"
@@ -24,19 +29,25 @@
   "author": "Asaf S.",
   "license": "MIT",
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.21",
+    "@types/json-stringify-safe": "^5.0.0",
     "husky": "^5.1.3",
     "jest": "^26.6.3",
     "lint-staged": "^10.5.4",
     "np": "^7.4.0",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
+    "shx": "^0.3.3",
     "ts-jest": "^26.5.4",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "firebase-admin": "^9.5.0"
+    "firebase-admin": "^9.5.0",
+    "json-stringify-safe": "^5.0.1"
   }
 }
