--- a/package.json
+++ b/package.json
@@ -9,16 +9,12 @@
     "task:static": "shx cp -R ./src/public ./dist",
     "task:tslint": "tslint -c tslint.json -p tsconfig.json --fix",
     "task:jest": "jest --forceExit",
-    "task:build_FE": "cd src_front_end && npm run build",
-    "task:static_FE": "shx cp -R ./src_front_end/public ./dist",
-
     "test": "npm-run-all task:clean task:jest",
     "publish": "np",
     "prepare": "husky install",
     "prestart": "npm run build",
-    "build": "npm-run-all task:clean task:tslint task:typescript task:static task:build_FE task:static_FE",
-    "start": "node -r source-map-support/register dist/demo.js",
-    "install": "cd src_front_end && npm install --legacy-peer-deps"
+    "build": "npm-run-all task:clean task:tslint task:typescript task:static",
+    "start": "node -r source-map-support/register dist/demo.js"
   },
   "bugs": {
     "url": "https://github.com/Asaf-S/firebase-express-dashboard/issues"
@@ -41,7 +37,7 @@
     "@types/jest": "^26.0.21",
     "@types/json-stringify-safe": "^5.0.0",
     "husky": "^5.1.3",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "lint-staged": "^10.5.4",
     "np": "^7.4.0",
     "npm-run-all": "^4.1.5",
