--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "scripts": {
     "task:clean": "rimraf ./dist",
     "task:typescript": "tsc -sourcemap",
@@ -11,8 +14,8 @@
     "task:tslint": "tslint -c tslint.json -p tsconfig.json --fix",
     "task:jest": "jest --forceExit",
     "test": "npm-run-all task:clean task:jest",
-    "publish": "np",
-    "prepare": "husky install",
+    "release": "np",
+    "prepare": "npm run build",
     "prestart": "npm run build",
     "build": "npm-run-all task:clean task:tslint task:typescript task:static",
     "start": "node -r source-map-support/register dist/demo.js"
@@ -40,7 +43,6 @@
     "husky": "^5.1.3",
     "jest": "26.6.0",
     "lint-staged": "^10.5.4",
-    "np": "^7.4.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "rimraf": "^3.0.2",
@@ -53,6 +55,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
-    "json-stringify-safe": "^5.0.1"
+    "json-stringify-safe": "^5.0.1",
+    "np": "*"
   }
 }
