--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "firebase-express-dashboard",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "!dist/demo*"
   ],
   "scripts": {
     "task:clean": "rimraf ./dist",
