--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.21",
     "@types/json-stringify-safe": "^5.0.0",
+    "@types/superagent": "^4.1.10",
     "husky": "^5.1.3",
     "jest": "26.6.0",
     "lint-staged": "^10.5.4",
@@ -57,6 +58,7 @@
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
     "json-stringify-safe": "^5.0.1",
-    "np": "*"
+    "np": "*",
+    "superagent": "^6.1.0"
   }
 }
