--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "types": "dist/index.d.ts",
   "files": [
     "dist/**/*",
-    "!dist/demo*",
-    ".np-config.json"
+    "!dist/demo*"
   ],
   "scripts": {
     "task:clean": "rimraf ./dist",
