--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "tslint": "^6.1.3"
   },
   "dependencies": {
+    "@types/node": "^15.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "firebase-admin": "^9.5.0",
