--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "task:jest": "jest --forceExit",
     "test": "npm-run-all task:clean task:jest",
     "release": "np",
-    "prepare": "npm run build",
+    "prepare": "npm run build && husky install",
     "prestart": "npm run build",
     "build": "npm-run-all task:clean task:tslint task:typescript task:static",
     "start": "node -r source-map-support/register dist/demo.js"
@@ -42,7 +42,8 @@
     "@types/jest": "^26.0.21",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/superagent": "^4.1.10",
-    "husky": "^5.1.3",
+    "dotenv": "^9.0.2",
+    "husky": "^6.0.0",
     "jest": "26.6.0",
     "lint-staged": "^10.5.4",
     "npm-run-all": "^4.1.5",
