--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-express-dashboard",
-  "version": "0.3.10",
+  "version": "0.3.11",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -39,7 +39,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.10",
     "@types/express": "^4.17.7",
-    "@types/jest": "^26.0.21",
+    "@types/jest": "^26.0.23",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/superagent": "^4.1.10",
     "dotenv": "^9.0.2",
@@ -61,6 +61,7 @@
     "firebase-admin": "^9.5.0",
     "json-stringify-safe": "^5.0.1",
     "np": "*",
-    "superagent": "^6.1.0"
+    "superagent": "^6.1.0",
+    "typescript": "^4.3.4"
   }
 }
