--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "task:static": "shx cp -R ./src/public ./dist",
     "task:tslint": "tslint -c tslint.json -p tsconfig.json --fix",
     "task:jest": "jest --forceExit",
-    "test": "npm-run-all task:clean task:jest",
+    "task:codecov": "dotenv codecov -f coverage/*.json",
+    "test": "npm-run-all task:clean task:jest task:codecov",
     "release": "np",
     "prepare": "npm run build && husky install",
     "prestart": "npm run build",
@@ -42,6 +43,7 @@
     "@types/jest": "^26.0.23",
     "@types/json-stringify-safe": "^5.0.0",
     "@types/superagent": "^4.1.10",
+    "codecov": "^3.8.3",
     "dotenv": "^9.0.2",
     "husky": "^6.0.0",
     "jest": "26.6.0",
