--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/superagent": "^4.1.10",
     "codecov": "^3.8.3",
     "dotenv": "^9.0.2",
+    "dotenv-cli": "^4.1.0",
     "husky": "^6.0.0",
     "jest": "26.6.0",
     "lint-staged": "^10.5.4",
